Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <hr><h2>
 <a name="images" class="anchor" href="#images"><span class="octicon octicon-link"></span></a>Images</h2>
 
-<p>As a rule, all images should be <em>at least</em> 640 px wide. This is the standard with of an article. If images are less than 640 px wide, your article will not look beautiful (and we really want beautiful articles). </p>
+<p>As a rule, all images should be <em>at least</em> 640 px wide. This is the standard width of an article. If images are less than 640 px wide, your article will not look beautiful (and we really want beautiful articles). </p>
 
-<p>If your image is over 640 px, great. It can be sized appropriately and optimized for efficient size and stunning clarity. </p>
+<p>If your image is over 640 px, great. It can be sized appropriately and optimized for efficient storage and stunning clarity. </p>
 
 <p>Skitch is an essential tool for resizing images, quick edits, and screen captures. (<a href="http://www.oldapps.com/mac/skitch_for_mac.php?old_skitch=10010">Download</a>)</p>
 
