--- a/index.html
+++ b/index.html
@@ -168,8 +168,6 @@ Exception: if the first element is a prefix like pre-, post-, or anti-, or if th
 
 <p>Choose link text that concisely indicates the nature of the linked document. Do not link terminal punctuation. Prefer shorter links to long ones.</p>
 
-<p>Alt-attribute text uses sentence-casing.</p>
-
 <h4>
 <a name="title-attribute-text" class="anchor" href="#title-attribute-text"><span class="octicon octicon-link"></span></a>Title-attribute text</h4>
 
@@ -194,6 +192,8 @@ Exception: if the first element is a prefix like pre-, post-, or anti-, or if th
 <p><strong>Bad</strong>: Cartoon image.</p>
 </blockquote>
 
+<p>Alt-attribute text uses sentence-casing.</p>
+
 <h3>
 <a name="punctuation" class="anchor" href="#punctuation"><span class="octicon octicon-link"></span></a>PUNCTUATION</h3>
 
@@ -201,7 +201,7 @@ Exception: if the first element is a prefix like pre-, post-, or anti-, or if th
 
 <p><strong>Citations</strong>: The titles of books and other major works as well as the titles of magazines and newspapers are marked up with the <code>cite</code> or <code>em</code> element for italic emphasis. The titles of articles and other short works are enclosed in quotation marks.</p>
 
-<p><strong>Commas</strong>: Use the serial comma (the comma preceding the “and” before the last element in a list) except in headlines and subheads.</p>
+<p><strong>Commas</strong>: Use the serial comma (the comma preceding the “and” before the last element in a list) except in headlines.</p>
 
 <p><strong>Company and publication names</strong>: Capitalize the names of companies according to each company’s preference unless they begin a sentence, in which case they must be capitalized. Do not capitalize or otherwise emphasize the definite article before the name of a publication—even the <em>New York Times</em>.</p>
 
