Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -272,11 +272,13 @@ Image adjustments, sizing, and compression should be completed before uploading 
 <hr><h3>
 <a name="the-lede-rhymes-with-need-not-spelled-lead" class="anchor" href="#the-lede-rhymes-with-need-not-spelled-lead"><span class="octicon octicon-link"></span></a>The Lede (rhymes with "need," not spelled "lead")</h3>
 
-<p>The lede is the most important part of the story, literally. It is the sentence or paragraph (or sometimes series of paragraphs) that contain the most essential information or concept you're trying to share. Don't confuse this with a hook (a sentence designed to draw a reader in) or the subhead (an article summary that works in harmony with the title or headline).</p>
+<p>The lede is the most important part of the story, literally. It is the sentence or paragraph* (or sometimes series of paragraphs) that contain the most essential information or concept you're trying to share. Don't confuse this with a hook (a sentence designed to draw a reader in) or the subhead (an article summary that works in harmony with the title or headline).</p>
 
 <p>While the lede is the core of the story, it is not the story itself. Every sentence should move the story forward and have a clear relationship to the lede.</p>
 
 <p>Sometimes the lede doesn't actually lead off the article. This is called "burying the lede" and it's not always a bad thing. </p>
+
+<p>*Here the concept of a lede and nut graph (nutshell paragraph) are combined togehter. They serve the same purpose through different forms.</p>
 
 <hr><h3>
 <a name="references" class="anchor" href="#references"><span class="octicon octicon-link"></span></a>References</h3>
